src/test/resources/semantic/sentences/error/TC_ERROR_RETURN_METHOD4.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 12 | COLUMNA 9 | Se esperaba un tipo de retorno B. |
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->B{
        ret;
    }
}

struct B{

}

impl B{
    .(){}
}
start{
}
